--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,15 @@ Obj/
 *.csproj
 *.sln
 .vsconfig
+Assets/Barmetler/Road System/Demo/Scenes/Models.unity.meta
+Assets/Barmetler/Road System/Demo/Scenes/Models.unity
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem/ReflectionProbe-0.exr.meta
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem/ReflectionProbe-0.exr
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem/New Lighting Settings.lighting.meta
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem/New Lighting Settings.lighting
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem/LightingData.asset.meta
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem/LightingData.asset
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem.unity.meta
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem.unity
+Assets/Barmetler/Road System/Demo/Scenes/ExampleSystem.meta
+Assets/Barmetler/Road System/Demo/Scenes.meta
